# cwrap-rs

./: Cargo.toml  Cwrap.code-workspace  README.md
core/: Cargo.toml
core/src/: drop.rs  error.rs  lib.rs  log.rs  path.rs  string.rs
examples/: basic.rs  simple.rs
macros/: Cargo.toml
src/: lib.rs
