[package]
name = "cwrap-core"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["debug"]
debug = ["tracing", "oops/debug"]
verbose = ["oops/verbose"]

#--
[lib]
name = "cwrap_core"

#--
[dependencies]

[dependencies.oops]
git = "https://github.com/open-dx/oops-rs"

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true
features = [
    "log",
    "log-always",
    "max_level_trace",
    "release_max_level_warn",
]
